--- a/shippable.yml
+++ b/shippable.yml
@@ -1,7 +1,9 @@
+language: none
+
 build_environment: Ubuntu 14.04
 
 before_install:
-  - curl -sSL https://get.docker.com | sudo sh
+  # - curl -sSL https://get.docker.com | sudo sh
   - sudo docker --version
 
 script:
