--- a/shippable.yml
+++ b/shippable.yml
@@ -2,9 +2,11 @@ language: none
 
 build_environment: Ubuntu 14.04
 
-before_install:
-  # - curl -sSL https://get.docker.com | sudo sh
-  - sudo docker --version
+build:
+  pre_ci:
+    - sudo docker --version
+    - sudo pip install -U docker-compose
+    - sudo docker-compose --version
+  ci:
+    - sudo docker build -t pyar6329/ruby-node:2.3.1-6.3.1 .
 
-script:
-  - sudo docker build .
