--- a/shippable.yml
+++ b/shippable.yml
@@ -3,14 +3,9 @@ language: none
 build_environment: Ubuntu 14.04
 
 build:
-  pre_ci:
-    - sudo docker --version
-    - sudo pip install --upgrade pip
-    - sudo pip install --upgrade docker-compose
-    - sudo docker-compose --version
   ci:
-    - sudo docker build -t pyar6329/ruby-node:latest .
-    - sudo docker push pyar6329/ruby-node
+    - sudo docker build -t pyar6329/ruby-node:2.3.1-6.3.1 .
+    - sudo docker push pyar6329/ruby-node:2.3.1-6.3.1
 integrations:
   hub:
     - integrationName: ruby-node
